--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "chart.js": "^4.4.2",
     "primeicons": "^6.0.1",
     "primeng": "^17.8.0",
     "rxjs": "~7.8.0",
